# CPRESS

./: .gitignore  README.md  compression_tool.py  gui.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
cpress/: __init__.py  archive.py  cli.py  parity.py
scripts/: bench.py  build_installers.sh  fuzz.py  install_context_menu.ps1
tests/: test_cpress_basic.py
