[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpress"
version = "0.5.0"
description = "High-level archiver CLI (zip/7z/tar.zst/etc., rar read) with AES, presets, policy, manifests"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Codex", email = "dev@example.com" }]
license = { text = "MIT" }
keywords = ["compression", "zip", "tar", "zstd", "7z", "rar", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Archiving",
]
dependencies = []

[project.optional-dependencies]
aes = ["pyzipper>=0.3.6"]
zstd = ["zstandard>=0.22"]
seven = ["py7zr>=0.21.0"]
rar = ["rarfile>=4.2"]
zipfast = ["pyminizip>=0.2.6"]
ux = ["tqdm>=4.66"]
rs = ["reedsolo>=1.5.4"]
all = ["pyzipper>=0.3.6", "zstandard>=0.22", "py7zr>=0.21.0", "rarfile>=4.2", "pyminizip>=0.2.6", "tqdm>=4.66"]

[project.scripts]
cpress = "cpress.cli:main"

[tool.setuptools.packages.find]
where = ["."]
